--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -49,3 +49,9 @@ other = "Nächste"
 
 [improve_this_page]
 other = "Diese Seite verbessern"
+
+[responsibilities]
+other = "Verantwortlichkeiten"
+
+[present]
+other = "Heute"
