--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -49,3 +49,9 @@ other = "Next"
 
 [improve_this_page]
 other = "Improve this page"
+
+[responsibilities]
+other = "Verantwortlichkeiten"
+
+[present]
+other = "Present"
